Changed how unknown individual names are stored for NH format unknowns

--- a/README.html
+++ b/README.html
@@ -98,8 +98,8 @@ $(document).ready(function () {
 
 
 <hr />
-<div id="hybriddetective-is-an-r-package-designed-to-work-in-concert-with-the-packages-parallelnewhybrid-and-genepopedit-to-streamline-and-where-possible-automate-the-detection-of-hybrids-by-moving-the-entire-process-into-the-r-environment." class="section level3">
-<h3><strong><em>hybriddetective</em></strong> is an R package designed to work in concert with the packages <strong>parallelnewhybrid</strong> and <strong>genepopedit</strong> to streamline, and where possible automate, the detection of hybrids by moving the entire process into the R environment.</h3>
+<div id="hybriddetective-is-an-r-package-designed-to-streamline-and-where-possible-automate-the-detection-of-hybrids-by-moving-the-entire-process-into-the-r-environment." class="section level3">
+<h3><strong><em>hybriddetective</em></strong> is an R package designed to streamline, and where possible automate, the detection of hybrids by moving the entire process into the R environment.</h3>
 </div>
 <div id="preamble" class="section level3">
 <h3>Preamble</h3>
