small typo in README

--- a/README.html
+++ b/README.html
@@ -226,7 +226,7 @@ $(document).ready(function () {
 <tr class="even">
 <td><strong>nh_build_example_results.R</strong></td>
 <td>Installs pre-analyzed example data to be used familiarize oneself with the functions <em>nh_preCheckR</em>, <em>nh_multiplotR</em>, and <em>hybridpowercomp</em></td>
-<td><a href="#example"><em>Example_Data</em></a></td>
+<td><a href="#example"><em>Example Data</em></a></td>
 </tr>
 </tbody>
 </table>
@@ -246,7 +246,7 @@ devtools::install_github(&quot;bwringe/hybriddetective&quot;) #This package</cod
 <hr />
 </div>
 <div id="example-data" class="section level3">
-<h3><a href="#example"><em>Example Data</em></a>:</h3>
+<h3>Example Data:</h3>
 <p>Example datasets have been provided as R images (.rda files). These can be loaded into your workspace using the <code>data()</code> function</p>
 <table>
 <colgroup>
